--- a/web_static/styles/8-places.css
+++ b/web_static/styles/8-places.css
@@ -13,14 +13,90 @@
 }
 
 .places article {
+    display: flex;
+    /*flex-flow: row wrap;*/
+    align-content: flex-start;
+    position: relative;
+    flex-direction: column;
     width: 390px;
+    height: 390px;
     padding: 20px;
     margin: 20px;
-    border: #FF5A5F solid 1px;
+    border: 1px solid #FF5A5F;
     border-radius: 4px;
+
+}
+
+.price_by_night {
+    color: #FF5A5F;
+    border: 4px solid #FF5A5F;
+    border-radius: 50%;
+    width: 80px;
+    height: 80px;
+    font-size: 30px;
+    position: absolute;
+    top: 16px;
+    right: 20px;
+    margin-left: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.user {
+    margin: 20px 0;
+}
+
+.price_by_night p {
+    margin: auto;
     text-align: center;
 }
 
-article h2 {
+.places article h2 {
     font-size: 30px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-top: 0px;
+    margin-bottom: 14%;
+}
+
+.information {
+    display: flex;
+    flex-direction: row;
+    flex-flow: row wrap;
+    justify-content: space-evenly;
+    height: 80px;
+    width: 400px;
+    padding-top: 3%;
+    margin-top: 3%;
+    border-top: 1px solid #DDDDDD;
+    border-bottom: 1px solid #DDDDDD;
+}
+.information .max_guest {
+    width: 100px;
+    background-image: url("../images/icon_group.png");
+    background-position: top;
+    background-repeat: no-repeat;
+}
+.information .number_rooms {
+    width: 100px;
+    background-image: url("../images/icon_bed.png");
+    background-position: top;
+    background-repeat: no-repeat;
+}
+.information .number_bathrooms {
+    width: 100px;
+    background-image: url("../images/icon_bath.png");
+    background-position: top;
+    background-repeat: no-repeat;
+}
+.information p {
+    text-align: center;
+    padding-top: 35%;
+}
+
+.description p {
+    margin: 0;
+    padding: 0;
 }
