--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -3,8 +3,9 @@ footer {
     height: 60px;
     width: 100%;
     border-top: 1px solid #CCCCCC;
+    position:fixed;
     display: flex;
     justify-content: center;
     align-items: center;
-    bottom: 0;
+    bottom: 0px;
 }
